/**
 * Follow this process to write e2e tests for the CLI project:
 *
 * 1. Test if all the necessary mocks for your tests already exist.
 *    In mock mode, run the command you want to test with the same arguments
 *    and parameters exactly as you want to test it, for example:
 *
 *    $ FRODO_MOCK=1 frodo conn save https://openam-frodo-dev.forgeblocks.com/am volker.scheuber@forgerock.com Sup3rS3cr3t!
 *
 *    If your command completes without errors and with the expected results,
 *    all the required mocks already exist and you are good to write your
 *    test and skip to step #4.
 *
 *    If, however, your command fails and you see errors like the one below,
 *    you know you need to record the mock responses first:
 *
 *    [Polly] [adapter:node-http] Recording for the following request is not found and `recordIfMissing` is `false`.
 *
 * 2. Record mock responses for your exact command.
 *    In mock record mode, run the command you want to test with the same arguments
 *    and parameters exactly as you want to test it, for example:
 *
 *    $ FRODO_MOCK=record frodo conn save https://openam-frodo-dev.forgeblocks.com/am volker.scheuber@forgerock.com Sup3rS3cr3t!
 *
 *    Wait until you see all the Polly instances (mock recording adapters) have
 *    shutdown before you try to run step #1 again.
 *    Messages like these indicate mock recording adapters shutting down:
 *
 *    Polly instance 'conn/4' stopping in 3s...
 *    Polly instance 'conn/4' stopping in 2s...
 *    Polly instance 'conn/save/3' stopping in 3s...
 *    Polly instance 'conn/4' stopping in 1s...
 *    Polly instance 'conn/save/3' stopping in 2s...
 *    Polly instance 'conn/4' stopped.
 *    Polly instance 'conn/save/3' stopping in 1s...
 *    Polly instance 'conn/save/3' stopped.
 *
 * 3. Validate your freshly recorded mock responses are complete and working.
 *    Re-run the exact command you want to test in mock mode (see step #1).
 *
 * 4. Write your test.
 *    Make sure to use the exact command including number of arguments and params.
 *
 * 5. Commit both your test and your new recordings to the repository.
 *    Your tests are likely going to reside outside the frodo-lib project but
 *    the recordings must be committed to the frodo-lib project.
 */

/*
// Cloud
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-volker-demo.forgeblocks.com/am frodo app list
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-volker-demo.forgeblocks.com/am frodo app list -l
// ForgeOps
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://nightly.gcp.forgeops.com/am FRODO_TEST_NAME='rootNoPrefix' frodo app list -lm forgeops
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://nightly.gcp.forgeops.com/am FRODO_TEST_NAME='rootPrefix' frodo app list --long --use-realm-prefix-on-managed-objects --type forgeops
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://nightly.gcp.forgeops.com/am FRODO_TEST_NAME='alphaNoPrefix' FRODO_REALM=alpha frodo app list -lm forgeops
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://nightly.gcp.forgeops.com/am FRODO_TEST_NAME='alphaPrefix' FRODO_REALM=alpha frodo app list --long --use-realm-prefix-on-managed-objects --type forgeops
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://nightly.gcp.forgeops.com/am FRODO_TEST_NAME='alphaBravoNoPrefix' FRODO_REALM=alpha/bravo frodo app list -lm forgeops
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://nightly.gcp.forgeops.com/am FRODO_TEST_NAME='alphaBravoPrefix' FRODO_REALM=alpha/bravo frodo app list --long --use-realm-prefix-on-managed-objects --type forgeops
 */
import cp from 'child_process';
import { promisify } from 'util';
import { getEnv, removeAnsiEscapeCodes } from './utils/TestUtils';
import { connection as c, forgeops_connection as fc } from './utils/TestConfig';

const exec = promisify(cp.exec);

process.env['FRODO_MOCK'] = '1';
const env = getEnv(c);
const forgeopsEnv = getEnv(fc);

describe('frodo app list', () => {
    test('"frodo app list": should list the ids of the apps', async () => {
        const CMD = `frodo app list`;
        const { stdout } = await exec(CMD, env);
        expect(removeAnsiEscapeCodes(stdout)).toMatchSnapshot();
    });

    test('"frodo app list -l": should list the ids, statuses, client types, grant types, scopes, and redirect URIs of the apps', async () => {
        const CMD = `frodo app list -l`;
        const { stdout } = await exec(CMD, env);
        expect(removeAnsiEscapeCodes(stdout)).toMatchSnapshot();
    });

    test('"frodo app list -lm forgeops": should list the ids, statuses, client types, grant types, scopes, and redirect URIs of "application" managed objects', async () => {
        const CMD = `frodo app list -lm forgeops`;
        const { stdout } = await exec(CMD, {
            env: {
                ...forgeopsEnv.env,
                FRODO_TEST_NAME: 'rootNoPrefix',
            }
        });
        expect(removeAnsiEscapeCodes(stdout)).toMatchSnapshot();
    });

    test('"frodo app list --long --use-realm-prefix-on-managed-objects --type forgeops": should list the ids, statuses, client types, grant types, scopes, and redirect URIs of "application" managed objects', async () => {
        const CMD = `frodo app list --long --use-realm-prefix-on-managed-objects --type forgeops`;
        const { stdout } = await exec(CMD, {
            env: {
                ...forgeopsEnv.env,
                FRODO_TEST_NAME: 'rootPrefix'
            }
        });
        expect(removeAnsiEscapeCodes(stdout)).toMatchSnapshot();
    });

    test('"frodo app list -lm forgeops": should list the ids, statuses, client types, grant types, scopes, and redirect URIs of "application" managed objects', async () => {
        const CMD = `frodo app list -lm forgeops`;
        const { stdout } = await exec(CMD, {
            env: {
                ...forgeopsEnv.env,
                FRODO_REALM: 'alpha',
                FRODO_TEST_NAME: 'alphaNoPrefix'
            }
        });
        expect(removeAnsiEscapeCodes(stdout)).toMatchSnapshot();
    });

    test('"frodo app list --long --use-realm-prefix-on-managed-objects --type forgeops": should list the ids, statuses, client types, grant types, scopes, and redirect URIs of "alpha_application" managed objects', async () => {
        const CMD = `frodo app list --long --use-realm-prefix-on-managed-objects --type forgeops`;
        const { stdout } = await exec(CMD, {
            env: {
                ...forgeopsEnv.env,
                FRODO_REALM: 'alpha',
                FRODO_TEST_NAME: 'alphaPrefix'
            }
        });
        expect(removeAnsiEscapeCodes(stdout)).toMatchSnapshot();
    });

    test('"frodo app list -lm forgeops": should list the ids, statuses, client types, grant types, scopes, and redirect URIs of "application" managed objects', async () => {
        const CMD = `frodo app list -lm forgeops`;
        const { stdout } = await exec(CMD, {
            env: {
                ...forgeopsEnv.env,
                FRODO_REALM: 'alpha/bravo',
                FRODO_TEST_NAME: 'alphaBravoNoPrefix'
            }
        });
        expect(removeAnsiEscapeCodes(stdout)).toMatchSnapshot();
    });

    test('"frodo app list --long --use-realm-prefix-on-managed-objects --type forgeops": should list the ids, statuses, client types, grant types, scopes, and redirect URIs of "bravo_application" managed objects', async () => {
        const CMD = `frodo app list --long --use-realm-prefix-on-managed-objects --type forgeops`;
        const { stdout } = await exec(CMD, {
            env: {
                ...forgeopsEnv.env,
                FRODO_REALM: 'alpha/bravo',
                FRODO_TEST_NAME: 'alphaBravoPrefix'
            }
        });
        expect(removeAnsiEscapeCodes(stdout)).toMatchSnapshot();
    });
});
